fixed star convas error with position z-index

--- a/src/assets/scss/module/contact.scss
+++ b/src/assets/scss/module/contact.scss
@@ -1,13 +1,11 @@
-.contact-wrapper {
-  position: relative;
-  z-index: 0;
-  .section-contact {
+.section-contact {
   flex-direction: column-reverse;
   gap: 4rem;
   overflow: hidden;
   flex: 0.75;
   display: flex;
-  z-index: 10;
+  z-index: 0;
+  position: relative;
 
   @include lg {
     flex-direction: row;
@@ -16,6 +14,7 @@
     background-color: #25262c;
     padding: 3rem;
     border-radius: 20px;
+    z-index: 2;
     form {
       margin-top: 1rem;
       display: flex;
@@ -49,6 +48,7 @@
   }
   &__planet {
     display: none;
+    z-index: 2;
     @include sm {
       display:block;
       flex: 1;
@@ -70,8 +70,6 @@
       }
     }
   }
-}
-
   .star-canvas {
     width: 100%;
     height: auto;
@@ -80,3 +78,4 @@
     z-index: 1;
   }
 }
+
